# reca-streaks

./: .gitignore  Finding Starlinks (1).ipynb  Finding Starlinks with and without functions.ipynb  Function to find Satellites.ipynb  HowBrightIsThatSatellite.ipynb  LICENSE  README.md  Satellite Streaks Practice (1).ipynb  Satellite Streaks Practice.ipynb  Searching for RA and DEC for the Expnums of the list.ipynb  Simple Image Access V2.ipynb  Simple Image Access.ipynb  get_decam_data.py  pyproject.toml  requirements.txt  streak_photometry.py
notebooks/analysis/: generate_paper_figures.ipynb  test_rotation_flux_conservation.ipynb  test_simulated_streak_photometry.ipynb
notebooks/andres_sandbox/: get_data.ipynb  simulated_streak.ipynb  streak_photometry_PSF_fitting_all_steps_2025SEP30.ipynb  test_photometry.ipynb
notebooks/exploration/: DECam-RECA-explore.ipynb
notebooks/paper_notebooks/: DECam_streaks_photometry-V2.ipynb  get_data.ipynb
notebooks/sandbox/andres_sandbox/: streak_brightness.ipynb  streak_photometry_PSF_fitting_all_steps_2025SEP30.ipynb  test_photometry.ipynb
reca_streaks/: __init__.py  constants.py  data.py  photometry.py
