[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reca-streaks"
version = "0.1.0"
description = "Satellite streak photometry for DECam images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.0",
    "matplotlib>=3.5",
    "numpy>=1.22",
    "pandas>=1.4",
    "requests>=2.27",
    "scipy>=1.8",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab",
    "opencv-python",
    "photutils",
    "scikit-image",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["reca_streaks*"]
